Fixed text on some browsers
The text too up too much room on my windows machine

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ main {
   height: 480px;
   padding: 0;
   margin: 0;
-  line-height: 10px;
+  line-height: 1px; /* just needs to be << 16px */
 }
 
 .cell {
